# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.922 2009/07/11 11:37:11 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.0 beta6 (2009/07/??)
 - (2009/07/11) Added new dashboard backend to show online agent and customers.
 - (2009/07/11) Improved dashboard api / module layer (added Preferences() to
    API to get/modify config settings of backend at runtime).
 - (2009/07/11) Fixed bug#3967 - Unable to create notes by using GenericAgent
    (Error: Need Charset!).
 - (2009/07/11) Fixed bug#3965 - New TicketOverview S/M/L feature: Last used
    ticket view mode get't only stored in current session but get lost after
    new relogin.
 - (2009/07/11) Fixed bug#3964 - Update script is not working correctly (Can't
    call method "NotificationAdd" on an undefined value at
    scripts/DBUpdate-to-2.4.pl line 218).
 - (2009/07/11) Fixed bug#3963 - Upgrade script is not executable
    scripts/DBUpdate-to-2.4.pl.

2.4.0 beta5 (2009/07/09)
 - (2009/07/09) Fixed bug# 3938 - GenericAgent.pl - send agent escalation
    notification escalation ERROR (Got no EncodeObject).
 - (2009/07/09) Updated Polish translation, thanks to Artur Skalski!
 - (2009/07/09) Updated French translation, thanks to Olivier Sallou!
 - (2009/07/09) Updated Persian translation, thanks to Afshar Mohebbi!
    See also at
    http://afsharm.blogspot.com/2009/06/localizing-otrs-into-persian-farsi.html
 - (2009/07/09) Added CSV/HTML export for Admin-SQL-Box feature.
 - (2009/07/09) Fixed bug# 3956 - New OpenSearch feature for fulltext search
    is not working.
 - (2009/07/08) Fixed bug# 3954 - Lite Theme is not working.
 - (2009/07/07) Updated Italian translation - Thanks to Remo Catelotti!
 - (2009/07/06) Fixed bug# 3948 - Some <OTRS> variables are not replaced in