@@ -2,7 +2,7 @@
 # Kernel/System/MailAccount/POP3S.pm - lib for pop3 accounts
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: POP3S.pm,v 1.7 2009/02/16 11:47:35 tr Exp $
+# $Id: POP3S.pm,v 1.8 2009/07/13 07:18:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -16,10 +16,14 @@ use warnings;
 
 #use Net::POP3::SSLWrapper;
 use Mail::POP3Client;
+
+# Mail::POP3Client depends on IO::Socket::SSL for secure connections but doesn't fail if it's
+# not present - therefore we 'use' this module explicitly. (see bug 3790)
+use IO::Socket::SSL;
 use Kernel::System::PostMaster;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.7 $) [1];
+$VERSION = qw($Revision: 1.8 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -103,6 +107,15 @@ sub Fetch {
     #        return;
     #    }
     my $NOM = $PopObject->Count();
+
+    # if there is no connection, Mail::POP3Client will return a -1 (see bug 3790)
+    if ( $NOM == -1) {
+        $Self->{LogObject}->Log(
+            Priority => 'error',
+            Message  => "$AuthType: Can't connect to $Param{Host}",
+        );
+        return;
+    }
 
     # fetch messages
     if ( $NOM > 0 ) {
