@@ -3,7 +3,7 @@
 # bin/otrs.checkModules - to check needed cpan framework modules
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: otrs.checkModules,v 1.34 2009/04/27 11:05:17 mh Exp $
+# $Id: otrs.checkModules,v 1.35 2009/07/13 07:18:31 martin Exp $
 # --
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU AFFERO General Public License as published by
@@ -105,11 +105,24 @@ my @NeededModules = (
         Module   => 'Net::POP3',
         Comment  => 'for POP3 connections',
         Required => 1,
+# Moved to Mail::POP3Client because of SSL problems
+#        Depends  => [
+#            {
+#                Module   => 'Net::POP3::SSLWrapper',
+#                Required => 0,
+#                Comment  => 'Required for SSL connections.',
+#            },
+#        ],
+    },
+    {
+        Module   => 'Mail::POP3Client',
+        Comment  => 'for POP3 SSL connections',
+        Required => 0,
         Depends  => [
             {
-                Module   => 'Net::POP3::SSLWrapper',
+                Module   => 'IO::Socket::SSL',
                 Required => 0,
-                Comment  => 'Required for SSL connections.',
+                Comment  => 'for POP3 SSL connections',
             },
         ],
     },
