@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.922 2009/07/11 11:37:11 martin Exp $
+# $Id: CHANGES,v 1.923 2009/07/13 07:18:31 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,10 @@
 # --
 
 2.4.0 beta6 (2009/07/??)
+ - (2009/07/13) Fixed bug#3790 - POP3S doesn't fail when IO::Socket::SSL is not
+    installed or mail server address is wrong.
+ - (2009/07/13) Improved dashboard api / module layer to load content changes
+    via AJAX / no compiled dashboard reload is needed.
  - (2009/07/11) Added new dashboard backend to show online agent and customers.
  - (2009/07/11) Improved dashboard api / module layer (added Preferences() to
     API to get/modify config settings of backend at runtime).
